[package]
name = "thorlibp2p"
version = "0.1.0"
authors = ["bin yu <froyo.bin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p= "0.12.0"
futures="0.1.28"
env_logger="0.6.2"
tokio = "0.1.22"
tokio-stdin-stdout="0.1.5"
tokio-io = "0.1.12"
futures-timer = "0.4.0"
futures03 = { package = "futures-preview", version = "0.3.0-alpha.19", features = ["compat"] }
hex="0.4.0"
log="0.4.8"